# pyeyerec

./: .gitignore  CHECKLIST.md  CONTRIBUTING.md  CREDITS.md  INSTALL.md  LOCAL_INSTALL.md  MANIFEST.in  README.md  install.sh  pyproject.toml  setup.py
cpp/: CMakeLists.txt
cpp/python/: CMakeLists.txt  py_pure.cpp
examples/: README.md  track_pupil.py
